@@ -16,7 +16,7 @@ class PasswordsController < ApplicationController
     self.resource = resource_class.reset_password!(params[resource_name])
 
     if resource.errors.empty?
-      set_flash_message :success, :updated
+      set_flash_message :notice, :updated
       sign_in_and_redirect(resource_name, resource)
     else
       render_with_scope :edit
