@@ -13,7 +13,7 @@ module Devise
         self.resource = resource_class.send(send_instructions_with, params[resource_name])
 
         if resource.errors.empty?
-          set_flash_message :success, :send_instructions
+          set_flash_message :notice, :send_instructions
           redirect_to new_session_path(resource_name)
         else
           render_with_scope :new
